# recognizer

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.builder  LICENSE  README.md  cmake-format.py  core.hpp  hello_cpp.cpp  hello_opencv.cpp  penguin.hpp  penguin.js  penguin.wasm  penguin_wasm.cpp  recognize.cpp  recognize.hpp  recognize.js  recognize.wasm  recognize_debug.cpp  recognize_debug2.cpp  recognize_test.html  recognize_v2_debug.cpp  recognize_v2_wasm_debug.cpp  recognize_wasm.cpp  recognizer.html  result.hpp  tempCodeRunnerFile.cpp  test1.cpp  test2.cpp
.github/workflows/: build-builder.yml  build-check.yml  build-release.yml
data/: stage_index.json
resources/icon/: FileGetter.py  IconExtractor.py  filter.json  iconGetter.py  iconUpdater.py
resources/json/: JsonMaker.py  hash_index.json  item_index.json  stage_index.json
src/: act24.hpp  core.hpp  depot.hpp  hash_index.json  item_index.json  recognize.hpp  recognizer.hpp  recognizer_local.cpp  recognizer_wasm.cpp  recognizer_wasm2.cpp  recognizer_wasm_new.cpp  result.hpp  stage_index.json
